Fix index page layout on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -6,3 +6,14 @@
     font-weight: 700;
     margin-bottom: 5px;
 }
+
+.service-image {
+    width:100px;
+    height:100px;
+}
+
+@media (max-width: 750px) {
+    .service-list-top-buffer {
+        margin-top:20px;
+    }
+}
